Admin and customer components added.

--- a/BookingUI/src/app/login/login.component.html
+++ b/BookingUI/src/app/login/login.component.html
@@ -7,7 +7,8 @@
         </mat-form-field>
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Password</mat-label>
-            <input  matInput  placeholder="Password"  formControlName="password" type="password">
+            <input  matInput  placeholder="Password"  formControlName="password" [type]="hide ? 'password' : 'text'" >
+            <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </mat-form-field>
         <mat-card-actions>
             <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">Log in</button>
