--- a/BookingUI/src/app/header/header.component.html
+++ b/BookingUI/src/app/header/header.component.html
@@ -6,7 +6,7 @@
       <span>My App</span>
       <span class="example-spacer"></span>
       <button mat-raised-button style="margin-right:10px" (click)="signUp()">Sign Up</button>
-      <button mat-raised-button>Login</button>
+      <button mat-raised-button (click)="login()">Login</button>
 
     </mat-toolbar>
 </p>
