--- a/BookingUI/src/app/signup/signup.component.html
+++ b/BookingUI/src/app/signup/signup.component.html
@@ -19,7 +19,8 @@
          </mat-form-field>
          <mat-form-field class="full-width" appearance="outline">
             <mat-label>Password</mat-label>
-            <input  matInput  placeholder="Password"  formControlName="password">
+            <input  matInput  placeholder="Password"  formControlName="password" [type]="hide ? 'password' : 'text'" >
+            <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
          </mat-form-field>
          <p>
         <mat-radio-group formControlName="role">
