--- a/BookingUI/src/app/header/header.component.html
+++ b/BookingUI/src/app/header/header.component.html
@@ -5,8 +5,16 @@
       </button>
       <span>My App</span>
       <span class="example-spacer"></span>
-      <button mat-raised-button style="margin-right:10px" (click)="signUp()">Sign Up</button>
-      <button mat-raised-button (click)="login()">Login</button>
+
+      <div *ngIf="!loggedIn()">
+        <button mat-raised-button style="margin-right:10px" (click)="signUp()">Sign Up</button>
+        <button mat-raised-button (click)="login()">Login</button>
+      </div>
+
+      <div *ngIf="loggedIn()">
+        <button mat-raised-button style="margin-right:10px" (click)="logout()">Log Out</button>
+      </div>
+
 
     </mat-toolbar>
 </p>
