House Model updated, View Component added and implemented

--- a/BookingUI/src/app/admin/admin.component.html
+++ b/BookingUI/src/app/admin/admin.component.html
@@ -1,1 +1,8 @@
-<app-view></app-view>
+<div class="body">
+    <ul style="list-style-type:none;">
+      <li *ngFor="let house of houses">
+        <app-view [house] = "house"></app-view>
+        <br>
+      </li>
+    </ul>
+  </div>
