admin and client route guards added,  view change made

--- a/BookingUI/src/app/admin/view/view.component.html
+++ b/BookingUI/src/app/admin/view/view.component.html
@@ -3,7 +3,7 @@
     <img mat-card-image style="margin-right: 200px;
     margin-top: 0px;" src="{{house.picture}}" alt="picture of the house" />
     <mat-card-content>
-      <div class="model">{{ house.description }} </div>
+      <div class="model">{{ house.description }}<span>{{ ' by ' + userName}}</span></div>
       <br/>
       <div class="props">
         <span>Address:</span> <br />
