update house component frontend done

--- a/BookingUI/src/app/admin/view/view.component.html
+++ b/BookingUI/src/app/admin/view/view.component.html
@@ -32,7 +32,7 @@
     </mat-card-content>
     
     <mat-card-actions>
-        <button mat-raised-button>
+        <button mat-raised-button (click)="updateHouse()">
           Update
         </button>
         <button mat-raised-button color="primary">
