--- a/BookingUI/src/app/customer/customer.component.html
+++ b/BookingUI/src/app/customer/customer.component.html
@@ -1,1 +1,7 @@
-<p>customer works!</p>
+<div class="body">
+    <div *ngFor="let house of houses">
+      <app-view [house] = "house"></app-view>
+      <br>
+    </div>
+  
+  </div>
