--- a/BookingUI/src/app/login/login.component.html
+++ b/BookingUI/src/app/login/login.component.html
@@ -11,8 +11,7 @@
             <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </mat-form-field>
         <mat-card-actions>
-            <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">Log in</button>
+            <button mat-raised-button  type="submit" [disabled]="loginForm.invalid">Log in</button>
         </mat-card-actions>
     </form>
   </mat-card-content>
-  
